NetBSD Problem Report #44673

From www@NetBSD.org  Thu Mar  3 17:45:53 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id B7E9F63B8EB
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  3 Mar 2011 17:45:52 +0000 (UTC)
Message-Id: <20110303174552.22A7963B84D@www.NetBSD.org>
Date: Thu,  3 Mar 2011 17:45:52 +0000 (UTC)
From: aran@100acres.us
Reply-To: aran@100acres.us
To: gnats-bugs@NetBSD.org
Subject: NetBSD32 binarys abort on amd64
X-Send-Pr-Version: www-1.0

>Number:         44673
>Category:       port-amd64
>Synopsis:       NetBSD32 binarys abort on amd64
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-amd64-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 03 17:50:00 +0000 2011
>Closed-Date:    Fri Mar 04 20:06:31 +0000 2011
>Last-Modified:  Fri Mar 04 20:06:31 +0000 2011
>Originator:     Arna Clauson
>Release:        5.99.47
>Organization:
>Environment:
NetBSD sanders 5.99.47 NetBSD 5.99.47 (SANDERS) #7: Mon Feb 28 09:34:21 PST 2011  aran@sanders:/home/NetBSD/obj/sys/arch/amd64/compile/SANDERS amd64
>Description:
After update to 5.99.47 from 5.99.39, the latex program from TeX Live 2010 fails to run with 

$ latex file.tex
Abort trap

ktrace produces the following:

680      1 ktrace   EMUL  "netbsd"
680      1 ktrace   RET   ktrace 0
680      1 ktrace   CALL  execve(0x7f7fffffd320,0x7f7fffffd808,0x7f7fffffd818)
680      1 ktrace   NAMI  "/usr/pkg/qt4/bin/latex"
680      1 ktrace   RET   execve -1 errno 2 No such file or directory
680      1 ktrace   CALL  execve(0x7f7fffffd320,0x7f7fffffd808,0x7f7fffffd818)
680      1 ktrace   NAMI  "/usr/local/texlive/2010/bin/i386-netbsd/latex"
680      1 ktrace   NAMI  "/usr/libexec/ld.elf_so-i386"
>How-To-Repeat:
Install current, run a 32-bit NetBSD binary
>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44673 CVS commit: src/sys/kern
Date: Thu, 3 Mar 2011 23:25:58 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Mar  4 04:25:58 UTC 2011

 Modified Files:
 	src/sys/kern: exec_subr.c

 Log Message:
 PR/44673: Arna Clauson: Latest MAXSSIZ bump broke netbsd32 emulation on amd64.
 - Use MAXSSIZ32 instead of MAXSSIZ for 32 bit binaries
 - Default MAXXSIZ32 to a quarter of MAXSSIZ (good enough?)
 - Add debugging
 XXX: Note that:
 	- sparc32 MAXSSIZ is larger than sparc64 MAXSSIZ
 	- sparc64 MAXSSIZ32 != sparc32 MAXSSIZ


 To generate a diff of this commit:
 cvs rdiff -u -r1.67 -r1.68 src/sys/kern/exec_subr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Fri, 04 Mar 2011 15:06:31 -0500
State-Changed-Why:
submitter verified that this has been fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.