PR/44673: Arna Clauson: Latest MAXSSIZ bump broke netbsd32 emulation on amd64. - Use MAXSSIZ32 instead of MAXSSIZ for 32 bit binaries - Default MAXXSIZ32 to a quarter of MAXSSIZ (good enough?) - Add debugging XXX: Note that: 	- sparc32 MAXSSIZ is larger than sparc64 MAXSSIZ 	- sparc64 MAXSSIZ32 != sparc32 MAXSSIZ